--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,9 +151,6 @@
     font-size: 16px;
   }
   
-  .intro {
-    text-align: center;
-  }
   
   .intro p {
     line-height: 1.7;
@@ -161,10 +158,10 @@
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
   }
   
   .steps {
-    text-align: center;
     background: #fce138;
   }
   
@@ -195,9 +192,10 @@
   .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
     border-bottom: 3px solid;
   }
   
@@ -210,7 +208,6 @@
   }
   
   .trainers {
-    text-align: center;
   }
   
   .trainer {
@@ -258,10 +255,10 @@
   
   /* REACH OUT STYLES START */
   .contact {
-    text-align: center;
     background: #024e76;
   }
   
+
   .contact h2 {
     color: #fce138;
   }
@@ -297,5 +294,8 @@
     color: #fce138;
   }
   
+  .flex-row {
+    display: flex;
+  }
   /* REACH OUT STYLES END */
   
