--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@
    
   
   header nav ul li a {
-    margin: 0 30px;
+    margin: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
   }
@@ -90,6 +90,7 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    align-items: flex-start;
   }
     
   /* Hero Style End */
@@ -110,7 +111,7 @@
     margin: 3.5%;
     color: #fff;
     font-size: 18px;
-    line-height: 1.3;
+    line-height: 1.2;
   }
   
   .hero-cta h2 {
@@ -190,7 +191,7 @@
   }
   
   .section-title {
-    font-size: 55px;
+    font-size: 48px;
     color: #024e76;
     padding-bottom: 20px;
     text-align: center;
@@ -299,3 +300,22 @@
   }
   /* REACH OUT STYLES END */
   
+  /*  MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
+  @media screen and (max-width:980px) {
+    
+    }
+    
+  }
+
+  /* MEDIA QUERY FOR TABLETS AND SMALLER */
+  @media screen and (max-width: 768px) {
+   
+    }
+  }
+
+  /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
+  @media screen and (max-width: 575px) {
+   
+    }
+    
+  }
