add visual enhancement elements

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,8 +18,10 @@ header {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  position: -webkit-sticky;
+  position: sticky;
 }
-
+ 
 header h1 {
   font-weight: bold;
   margin: 0;
@@ -50,6 +52,12 @@ header nav ul li a {
   font-size: 1.55vw;
 }
 
+header nav ul li a:hover {
+  background: #fce138;
+  color: #024e76;
+  border-radius: 15px;
+  text-shadow: none;
+}
 /* HEADER / NAVBAR STYLES END */
 
 
@@ -109,15 +117,21 @@ section {
   font-style: italic;
   font-size: 55px;
   color: #fce138;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .hero-form {
   border: 3px solid #024e76;
-  background-color: #fce138;
+  border-radius: 15px;
+  background-color: rgba(252, 225, 56, 0.8);
   padding: 20px;
   color: #024e76;
   width: 40%;
   margin: 3.5%;
+}
+
+.hero-form button:hover {
+  background-color: #39a6b2;  
 }
 
 .hero-form h3 {
@@ -130,12 +144,19 @@ section {
 
 .form-input {
   border: 1px solid #024e76;
+  border-radius: 15px;
   display: block;
   padding: 7px 15px;
   font-size: 16px;
   color: #024e76;
   width: 100%;
   margin-bottom: 15px; 
+  background-color: rgba(255,255,255, 0.75);
+}
+
+.form-input:focus {
+  background-color: rgba(255,255,255, 1);
+  outline: none;
 }
 
 .hero-form label {
@@ -146,6 +167,7 @@ section {
   color: #fce138;
   background-color: #024e76;
   border: none;
+  border-radius: 15px;
   padding: 10px 20px;
   font-size: 16px;
 } 
@@ -194,11 +216,14 @@ section {
   margin: 50px auto;
   padding-bottom: 50px;
   width: 80%;
-  border-bottom: 1px solid #39a6b2;
-  display: flex;
+ display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
+}
+
+.step:not(:last-child) {
+  border-bottom: 1px solid #39a6b2;
 }
 
 .step h3 {
@@ -322,6 +347,7 @@ section {
 
 .contact-form input, .contact-form textarea {
   border: 1px solid #024e76;
+  border-radius: 15px;
   display: block;
   padding: 7px 15px;
   font-size: 16px;
@@ -329,16 +355,29 @@ section {
   width: 100%;
   margin-bottom: 15px;
   margin-top: 5px;
+  background-color: rgba(255,255,255, 0.75);
+}
+
+.contact-form input:focus, .contact-form textarea:focus {
+  background-color: rgba(255,255,255, 1);
+  outline: none;
+
 }
 
 .contact-form button {
   width: 100%;
   border: none;
+  border-radius: 15px;
   background: #fce138;
   color: #024e76;
   text-align: center;
   padding: 15px 0;
   font-size: 16px;
+}
+
+.contact-form button:hover {
+  color: #fce138;
+  background: #39a6b2;
 }
 
 .contact-info a {
@@ -371,6 +410,7 @@ section {
   header h1 {
     width: 100%;
     text-align: center;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   }
 
   header nav ul {
@@ -381,6 +421,7 @@ section {
 
   header nav ul li a {
     font-size: 20px;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   }
 
   footer h2, footer div {
